# ornatrix_sdk

./: CMakeLists.txt  Main.cpp
Test/: CMakeLists.txt  Main.cpp
Test/Ornatrix/: AdoptExternalGuidesTest.cpp  AlembicExportTest.cpp  AlembicLoaderTest.cpp  ClumperTest.cpp  ControlPointsTest.cpp  CurlerTest.cpp  DetailerTest.cpp  DistributionMeshSubdivisionTest.cpp  FilterTest.cpp  FrizzerTest.cpp  GroomTest.cpp  GroomerTest.cpp  GroundTest.cpp  GuidesDeltaTest.cpp  GuidesEditorTest.cpp  GuidesFromMeshGeneratorTest.cpp  HairBaseTest.cpp  HairExperimentalTest.cpp  HairFromGuidesGeneratorTest.cpp  HairFromMeshStripsGeneratorTest.cpp  Main.cpp  MainStatic.cpp  MergeTest.cpp  MeshFromHairGeneratorTest.cpp  MeshFromPointCloudTest.cpp  NormalizeTest.cpp  ParametersTest.cpp  Params2Test.cpp  PropagatorTest.cpp  RampTest.cpp  ScatterTest.cpp  StrandDataGeneratorTest.cpp  SurfaceCombTest.cpp  SymmetryTest.cpp  TestOperator.h  TestParameters.g.h  TestParametersImpl.g.h  Utilities.cpp  Utilities.h  UtilitiesTest.cpp  (+1 more)
Test/Ornatrix3dsmax/: AllTests.ms  Test_AdoptExternalGuidesModifier.ms  Test_AlembicExporter.ms  Test_AnimationModifier.ms  Test_BakedGuidesObject.ms  Test_BakedHairObject.ms  Test_BraidGuidesObject.ms  Test_ClumpModifier.ms  Test_CurlingModifier.ms  Test_DetailModifier.ms  Test_DrawHairEffect.ms  Test_DynamicsModifier.ms  Test_EditGuidesModifier.ms  Test_FilterModifier.ms  Test_FrizzModifier.ms  Test_GenerateGuideDataModifier.ms  Test_GravityModifier.ms  Test_Grooms.ms  Test_GroomsSavingLoading.ms  Test_GroundStrandsModifier.ms  Test_GuideClusteringModifier.ms  Test_GuidesFromGuideMeshModifier.ms  Test_GuidesFromHairModifier.ms  Test_GuidesFromMeshModifier.ms  Test_GuidesFromMeshObject.ms  Test_GuidesFromShapeModifier.ms  Test_GuidesFromShapeObject.ms  Test_GuidesOnSplineModifier.ms  Test_HairClusteringModifier.ms  Test_HairFromGuidesModifier.ms  Test_HairFromMeshStripsObject.ms  Test_HairFromParticlesObject.ms  Test_HairShellsModifier.ms  Test_LengthModifier.ms  Test_MaterialShaders.ms  Test_MeshFromStrandsModifier.ms  Test_Modifiers.ms  Test_MoovPhysicsModifier.ms  Test_MultiplierModifier.ms  Test_PropagationModifier.ms  (+9 more)
Test/OrnatrixC4D/: C4DTest.py  TestUtilities.py  Test_AdoptExternalGuides.py  Test_Alembic.py  Test_BakeModifiers.py  Test_BakedGuides.py  Test_BakedHair.py  Test_Braid.py  Test_ClumpModifier.py  Test_DistributionMesh.py  Test_EG.py  Test_EG_ChannelData.py  Test_EG_MoveDeform.py  Test_EG_Transform.py  Test_Frizz.py  Test_GFC.py  Test_GFM.py  Test_GFM_FaceInclude.py  Test_GFM_FaceIncludeRedistribute.py  Test_GFM_FaceIncludeTag.py  Test_GFM_FaceIncludeTagRedistribute.py  Test_GFM_RememberRoots.py  Test_GenerateStrandData.py  Test_GroundStrands.py  Test_GroundStrands_TransformedSurface.py  Test_GuidesFromHair.py  Test_HFG.py  Test_HFG_FaceInclude.py  Test_HFG_RememberRoots.py  Test_HFMS.py  Test_MFS.py  (+7 more)
(+220 files in other folders)
